--- a/demo_csdlnc/demo_csdlnc/Views/TieuChi/Details.cshtml
+++ b/demo_csdlnc/demo_csdlnc/Views/TieuChi/Details.cshtml
@@ -1,30 +1,26 @@
 ﻿@model demo_csdlnc.Models.TieuChi
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Chi tiết Tiêu chí";
 }
 
-<h1>Details</h1>
+<div class="container mt-4">
+    <h2 class="mb-4">Chi tiết Tiêu chí</h2>
 
-<div>
-    <h4>TieuChi</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TenTieuChi)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TenTieuChi)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MoTa)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MoTa)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.MaTieuChi">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div class="card shadow-sm p-4">
+        <h5 class="card-title text-primary">@Html.DisplayFor(model => model.TenTieuChi)</h5>
+        <hr>
+        <dl class="row">
+            <dt class="col-sm-3 font-weight-bold">Tên Tiêu chí:</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.TenTieuChi)</dd>
+
+            <dt class="col-sm-3 font-weight-bold">Mô tả:</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.MoTa)</dd>
+        </dl>
+    </div>
+
+    <div class="mt-4">
+        <a asp-action="Edit" asp-route-id="@Model?.MaTieuChi" class="btn btn-warning">Sửa</a>
+        <a asp-action="Index" class="btn btn-secondary">Quay lại danh sách</a>
+    </div>
 </div>
